# thermo_sensor

./: Cargo.toml  Dockerfile.node  Dockerfile.rust  README.md  config.toml  docker-compose.yml
frontend/: package.json
frontend/src/: App.vue
frontend/src/components/: ThermoCard.vue  ThermoGauge.vue  ThermoNameSetter.vue  ThermoPlot.vue
frontend/src/components/gauge/: ThermoGauge.vue  ThermoNameSetter.vue  Thermometer.vue
frontend/src/components/plot/: ModeSelection.vue  TimeSelection.vue
frontend/src/interfaces/: device.interface.ts
frontend/src/services/: thermo.service.ts  thermo.ts
src/: bluetooth.rs  config.rs  database.rs  lib.rs  main.rs  reading.rs
