[package]
name = "thermo_sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = { version = "0.11.7", features = ["serde"] } 
futures = "0.3.31"
serde = "1.0.217"
serde_derive = "1.0.217"
toml = "0.8.19"
tokio = {version="1.43.0" ,features=["full"]}
uuid = {version = "1.12.1", features=["v4","serde"]}
rusqlite = {version="0.33.0", features=["chrono"]}
actix = "0.13.5"
actix-web = "4.9.0"
chrono = {version="0.4.39", features=["serde"]}
